--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Scrobbling\Data\ReleaseResultViewModel.cs" />
     <Compile Include="Scrobbling\Data\ScrobbableObjectListView.cs" />
     <Compile Include="Scrobbling\Data\SetlistResultViewModel.cs" />
+    <Compile Include="Scrobbling\Data\TagViewModel.cs" />
     <Compile Include="Scrobbling\Data\Track.cs" />
     <Compile Include="Scrobbling\IAuthScrobbler.cs" />
     <Compile Include="Scrobbling\Scrobbler\ICanSelectScrobbles.cs" />
